trunk/Archive2/0a/6f13cac4ba3bb3/output
main.cpp:10:5: error: defaulted definition of default constructor is not constexpr
    constexpr Y() = default;
    ^
main.cpp:15:7: error: no matching constructor for initialization of 'Y'
    Y y;
      ^
main.cpp:7:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
struct Y
       ^
main.cpp:7:8: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
2 errors generated.
