trunk/Archive2/0a/6f13cac4ba3bb3/main.cpp
#include <iostream>
struct X
{
    X() { std::cout<<"hello"; }
};

struct Y
{
    X x;
    constexpr Y() = default;
};

int main()
{
    Y y;
}